Fix figCapation spacing

--- a/src/components/Layouts/Base/global.css
+++ b/src/components/Layouts/Base/global.css
@@ -46,7 +46,7 @@ figcaption {
 .gatsby-highlight {
     background-color: #fdf6e3;
     border-radius: 0.3em;
-    margin: 0.5em 0;
+    margin-bottom: 1.58rem;
     padding: 1em;
     overflow: auto;
 }
